--- a/about.html
+++ b/about.html
@@ -22,14 +22,13 @@
 
 <body class="bg-primary">
   <!-- Navbar section -->
+  <!-- Navbar section -->
   <header class="bg-light">
-    <!-- Navbar section -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-ligh">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img class="logo-image" src="/assets/img/logo-propl.png" alt=" logo image">
+          <img class="logo-image" src="/assets/img/logo-propl.png" alt="Company branding">
         </a>
-
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -38,16 +37,14 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-link active" href="index.html">Home</a>
             <a class="nav-link" href="about.html">About Us</a>
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="contact.html">Contact Us</a>
             <a class="nav-link" href="#">Candidate <i class="fa-sharp fa-solid fa-users-viewfinder"></i></a>
             <a class="nav-link me-5" href="#">Employer <i class="fa-regular fa-circle-user"></i> </a>
           </div>
-          <!-- <a href="#" class="btn btn-secondary">Apply Here</a> -->
         </div>
       </div>
     </nav>
   </header>
-
   <main class="about-section">
     <div class="">
       <div class="container py-5">
@@ -70,20 +67,20 @@
               candidates.
               This is how propL was born: to make hiring process effective for companies and fair and engaging for
               candidates.</p>
-              <p class="lead text-light mb-0"> Mai, Founder & CEO</p>
+            <p class="lead text-light mb-0"> Mai, Founder & CEO</p>
           </div>
-          <div class="col-lg-6 d-none d-lg-block"><img src="/assets/img/exhibition.jpg"
-              alt="" class="img-fluid about-img"></div>
+          <div class="col-lg-6 d-none d-lg-block"><img src="/assets/img/exhibition.jpg" alt="About page image "
+              class="img-fluid about-img"></div>
         </div>
       </div>
     </div>
 
-   
+
     <section id="team">
       <div class="container my-3 py-5 text-center">
         <div class="row mb-5">
           <div class="col">
-            <h1>Meet our Team</h1>
+            <h2>Meet our Team</h2>
             <p class="mt-3">
               We are a team of 5 people that are members of the team that will play the game in the game
             </p>
@@ -96,9 +93,10 @@
           <div class="col-lg-3 col-md-6">
             <div class="card card-10">
               <div class="card-body">
-                <img src="./assets/img/profile5.png" alt="Team photo" class="img-fluid rounded-circle w-50 mb-3">
+                <img src="./assets/img/profile5.png" alt="Mai profile photo" class="img-fluid rounded-circle w-50 mb-3">
                 <h3 class="text-white">Mai Phan </h3>
-                <h5 class="text-white">CEO & Founder</h5>
+                <h4 class="text-white">CEO & Founder</h4>
+
                 <p class="text-white">Mai is a second-time entrepreneur with a passion for social impact and
                   sustainability. She has a background in strategy,
                   business and product development as well as DNV certification for recruiting personnel. A mom, wife,
@@ -108,20 +106,12 @@
 
                 <div class="d-flex flex-row justify-content-center">
                   <div class="p-4">
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/maiphan/">
                       <i class="fa-brands fa-linkedin"></i>
                     </a>
                   </div>
-                  <div class="p-4">
-                    <a href="#">
-                      <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                  </div>
-                  <div class="p-4">
-                    <a href="#">
-                      <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                  </div>
+
+
                 </div>
               </div>
             </div>
@@ -130,9 +120,10 @@
           <div class="col-lg-3 col-md-6">
             <div class="card card-20">
               <div class="card-body">
-                <img src="./assets/img/profile2.png" alt="Team photo" class="img-fluid rounded-circle w-50 mb-3">
+                <img src="./assets/img/profile2.png" alt="Finn profile  photo"
+                  class="img-fluid rounded-circle w-50 mb-3">
                 <h3 class="text-white">Finn Erik Solvang</h3>
-                <h5 class="text-white">Business Strategy</h5>
+                <h4 class="text-white">Business Strategy</h4>
                 <p class="text-white">Finn is a serial entrepreneur with over 24 years of experience in startup,
                   disruptive business models, digital
                   platforms, deep tech, circular products and business innovation for the circular economy. When not at
@@ -145,16 +136,8 @@
                       <i class="fa-brands fa-linkedin"></i>
                     </a>
                   </div>
-                  <div class="p-4">
-                    <a href="#">
-                      <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                  </div>
-                  <div class="p-4">
-                    <a href="#">
-                      <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                  </div>
+
+
                 </div>
               </div>
             </div>
@@ -163,9 +146,10 @@
           <div class="col-lg-3 col-md-6">
             <div class="card card-30">
               <div class="card-body">
-                <img src="./assets/img/profile4.png" alt="Team photo" class="img-fluid rounded-circle w-50 mb-3">
+                <img src="./assets/img/profile4.png" alt="Malte profile image "
+                  class="img-fluid rounded-circle w-50 mb-3">
                 <h3 class="text-white">Malte Runge</h3>
-                <h5 class="text-white">Organizational psychology</h5>
+                <h4 class="text-white">Organizational psychology</h4>
                 <p class="text-white">Malte is an organizational psychologist and associate professor at Oslo
                   Metropolitan University. He is interested
                   research methods more generally and psychometrics specifically, and studies motivation, personality,
@@ -173,21 +157,15 @@
                   team processes. When he is not working, he spends time with his kids and learns flamenco guitar.</p>
 
                 <div class="d-flex flex-row justify-content-center">
+
                   <div class="p-4">
                     <a href="#">
                       <i class="fa-brands fa-linkedin"></i>
                     </a>
                   </div>
-                  <div class="p-4">
-                    <a href="#">
-                      <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                  </div>
-                  <div class="p-4">
-                    <a href="#">
-                      <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                  </div>
+
+
+
                 </div>
               </div>
             </div>
@@ -196,9 +174,10 @@
           <div class="col-lg-3 col-md-6">
             <div class="card card-40">
               <div class="card-body">
-                <img src="./assets/img/profile3.png" alt="Team photo" class="img-fluid rounded-circle w-50 mb-3">
+                <img src="./assets/img/profile3.png" alt="Trung image profile "
+                  class="img-fluid rounded-circle w-50 mb-3">
                 <h3 class="text-white">Trung Duy Nguyen </h3>
-                <h5 class="text-white">Data Scientis</h5>
+                <h4 class="text-white">Data Scientis</h4>
                 <p class="text-white">Trung has several years of professional experience in Data Science and
                   Engineering, who develops and designs complex
                   Data & AI system. He is deeply passionate with Nordic landscapes, and he usually spend his spare time
@@ -211,17 +190,9 @@
                       <i class="fa-brands fa-linkedin"></i>
                     </a>
                   </div>
-                  <div class="p-4">
-                    <a href="#">
-                      <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                  </div>
-                  <div class="p-4">
-                    <a href="#">
-                      <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                  </div>
+
                 </div>
+
               </div>
             </div>
           </div>
@@ -231,7 +202,7 @@
               <div class="card-body">
                 <img src="./assets/img/profile1.png" alt="Team photo" class="img-fluid rounded-circle w-50 mb-3">
                 <h3 class="text-white">Jennifer Milleza </h3>
-                <h5 class="text-white">Board Member</h5>
+                <h4 class="text-white">Board Member</h4>
                 <p class="text-white">Jennifer has several years of experience managing SMBs and startups, and is
                   currently working with HR, Admin and
                   accounting for Valunor AS, a scale up working in the circular tech industry. In her free time she
@@ -244,26 +215,15 @@
                       <i class="fa-brands fa-linkedin"></i>
                     </a>
                   </div>
-                  <div class="p-4">
-                    <a href="#">
-                      <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                  </div>
-                  <div class="p-4">
-                    <a href="#">
-                      <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                  </div>
+
                 </div>
               </div>
             </div>
           </div>
 
-
         </div>
       </div>
     </section>
-
   </main>
 
   <!-- Footer section -->
@@ -316,7 +276,7 @@
           <div class="border-top my-5"></div>
         </div>
         <div class="col-md-6">
-          <p><small>© 2019 All Rights Reserved.</small></p>
+          <p><small> © 2019 All Rights Reserved.</small></p>
         </div>
         <div class="col-md-6 text-md-right">
           <ul class="social list-unstyled">
@@ -328,8 +288,6 @@
       </div>
     </div>
   </footer>
-
-
   <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
