--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
 
 <body class="bg-primary">
   <!-- Navbar section -->
+  <!-- Navbar section -->
   <header class="bg-light">
-    <!-- Navbar section -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-ligh">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img class="logo-image" src="/assets/img/logo-propl.png" alt=" logo image">
+          <img class="logo-image" src="/assets/img/logo-propl.png" alt="Company branding">
         </a>
-
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -35,11 +34,10 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-link active" href="index.html">Home</a>
             <a class="nav-link" href="about.html">About Us</a>
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="contact.html">Contact Us</a>
             <a class="nav-link" href="#">Candidate <i class="fa-sharp fa-solid fa-users-viewfinder"></i></a>
             <a class="nav-link me-5" href="#">Employer <i class="fa-regular fa-circle-user"></i> </a>
           </div>
-          <!-- <a href="#" class="btn btn-secondary">Apply Here</a> -->
         </div>
       </div>
     </nav>
@@ -69,16 +67,17 @@
               <a href="#" class="btn btn-primary shadow lift me-1"> <i class="fa-solid fa-right-from-bracket 2-x"></i>
                 Employer Sign Up Nows
               </a>
-              <a href="#" class="btn btn-secondary shadow lift me-1 "> <i class="fa-solid fa-user-plus"></i>
-                Candidate click here
+              <a href="#" class="btn btn-secondary shadow lift me-1">
+                <i class="fa-solid fa-user-plus"></i> Candidate click here
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <!-- Image -->
             <figure class="image-figure">
-              <img src="./assets/img/hreo-img.png" class="w-100" alt="hero-image" data-aos="fade-down"
-                data-aos-delay="100" style="border-radius: 48px 48px 300px 48px;">
+              <img src="./assets/img/hreo-img.png" class="w-100"
+                alt="A woman interviewing another person,sitting on the desk," data-aos="fade-down" data-aos-delay="100"
+                style="border-radius: 48px 48px 300px 48px;">
             </figure>
           </div>
         </div>
@@ -89,7 +88,7 @@
       <div class="container">
         <div class="text-header text-center">
           <h2 class="mb-lg-5">How our process works for you as a hiring manager</h2>
-          
+
         </div>
 
         <div class="items text-right">
@@ -264,7 +263,7 @@
           <h3>Subscribe to our newsletter</h3>
           <p class="mb-4">Monthly digest of what's new and exciting from us.</p>
           <form action="#" class="subscribe col-9">
-            <input type="email" class="form-control py-3 text-bg-light" id="inp1"  placeholder="Enter your e-mail">
+            <input type="email" class="form-control py-3 text-bg-light" id="inp1" placeholder="Enter your e-mail">
             <input type="submit" class="btn btn-submit" value="Send">
           </form>
         </div>
