--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <div class="col-md-4 mb-4 mb-md-0">
           <h3>Subscribe to our newsletter</h3>
           <p class="mb-4">Monthly digest of what's new and exciting from us.</p>
-          <form action="#" class="subscribe col-9">
+          <form action="/news.html" class="subscribe col-9">
             <input type="email" class="form-control py-3 text-bg-light" id="inp1" placeholder="Enter your e-mail">
             <input type="submit" class="btn btn-submit" value="Send">
           </form>
