--- a/news.html
+++ b/news.html
@@ -44,45 +44,48 @@
   </header>
 
   <main>
-    <section class="get_in_touch">
+    <section class="get_in_touch-new">
       <h1 class="title">Please provide your email address</h1>
-      <div class="container align-items center">
+      <div class="container">
+        <form action="#" class="subscribe col-5">
+          <div class="subscribe-form row">
+            <label for="exampleInputEmail1" class="form-label">Name*</label>
+            <input type="name" class="form-control py-3 text-bg-light" id="nameplaceholder=" name" required>
 
-        
-        <form action="/action_page.php">
-          <div class="form-field col-lg-6">
+            <div class="checkbox">
+              <label><input type="checkbox">Subscribe me to your newsletter</label>
+            </div>
+
             <label for="exampleInputEmail1" class="form-label">Email*</label>
-            <input id="email" class="input-text" type="email" name="" required>
-          </div>
-          <div class="checkbox">
-            <label><input type="checkbox">Subscribe me to your newsletter</label>
-          </div>
+            <input type="email" class="form-control py-3 text-bg-light" id="email" placeholder="Enter your e-mail"
+              required>
 
-          <div class="form-field col-lg-6">
-            <label for="exampleInputEmail1" class="form-label">Email*</label>
-            <input id="email" class="input-text" type="email" name="" required>
-          </div>
-          <p>Who are you and what brings you to propL? Your answer will help us send more relevant content tailored
-            specifically for
-            you.
-            *</p>
+            <p>Who are you and what brings you to propL? Your answer will help us send more relevant content tailored
+              specifically for
+              you.
+              *</p>
 
-          <div class="checkbox">
-            <label><input type="checkbox"> Investor looking for a new investment opportunity</label>
-          </div>
-          <div class="checkbox">
-            <label><input type="checkbox">Company looking for a new way of recruitment and selection</label>
-          </div>
-          <div class="checkbox">
-            <label><input type="checkbox">None of the above. I am just interested in learning more about the company and
-              product.</label>
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
+            <div class="checkbox">
+              <label><input type="checkbox"> Investor looking for a new investment opportunity</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox">Company looking for a new way of recruitment and selection</label>
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox">None of the above. I am just interested in learning more about the company
+                and
+                product.</label>
+            </div>
+            <div class="form-field col-lg-12">
+              <button type="submit" class="submit-btn">Submit</button>
+            </div>
         </form>
+      </div>
 
       </div>
-    </section>
 
+
+    </section>
   </main>
 
   <!-- Footer section -->
