--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
         <div class="col-md-4 mb-4 mb-md-0">
           <h3>Subscribe to our newsletter</h3>
           <p class="mb-4">Monthly digest of what's new and exciting from us.</p>
-          <form action="#" class="subscribe col-9">
-            <input type="email" class="form-control py-3 text-bg-light" id="inp1" placeholder="Enter your e-mail">
+          <form action="#" class="subscribe">
+            <input type="text" class="form-control" placeholder="Enter your e-mail">
             <input type="submit" class="btn btn-submit" value="Send">
           </form>
         </div>
@@ -273,7 +273,7 @@
           <div class="border-top my-5"></div>
         </div>
         <div class="col-md-6">
-          <p><small>© 2019 All Rights Reserved.</small></p>
+          <p><small> © 2019 All Rights Reserved.</small></p>
         </div>
         <div class="col-md-6 text-md-right">
           <ul class="social list-unstyled">
@@ -285,8 +285,6 @@
       </div>
     </div>
   </footer>
-
-
   <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
