--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <!-- Text -->
           <div class="col-md-6">
             <div class="text-information-2">
-              <h3>Our customers</h3>
+              <h3>Our supporters</h3>
 
             </div>
           </div>
