--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body class="bg-primary">
-  <!-- Navbar section -->
+
   <!-- Navbar section -->
   <header class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-light bg-ligh">
@@ -64,10 +64,10 @@
 
             <!-- Buttons -->
             <div class="buttons text-center text-md-start">
-              <a href="#" class="btn btn-primary shadow lift me-1"> <i class="fa-solid fa-right-from-bracket 2-x"></i>
-                Employer Sign Up Nows
+              <a href="https://share-eu1.hsforms.com/1KofqwQsSRxSl340KMmv-ywetkjl" class="btn btn-primary shadow lift me-1"> <i class="fa-solid fa-right-from-bracket 2-x"></i>
+                Employer Sign Up Now
               </a>
-              <a href="#" class="btn btn-secondary shadow lift me-1">
+              <a href="https://share.proto.io/YEUHOV/" class="btn btn-secondary shadow lift me-1">
                 <i class="fa-solid fa-user-plus"></i> Candidate click here
               </a>
             </div>
