--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <!-- Heading -->
             <div class="heading">
               <h1 class="display-3 text-center text-md-start">
-                Welcome to <span class="text-white">Propl </span>. <br>
-                Empowering careers, connecting talents
+                Welcome to <span class="text-white">Propl. </span><br>
+                Empowering careers, connecting the talents
               </h1>
               <!-- Text -->
               <p class="lead text-center text-md-start  mb-6 mb-lg-8">
@@ -65,10 +65,10 @@
             <!-- Buttons -->
             <div class="buttons text-center text-md-start">
               <a href="https://share-eu1.hsforms.com/1KofqwQsSRxSl340KMmv-ywetkjl" class="btn btn-primary shadow lift me-1"> <i class="fa-solid fa-right-from-bracket 2-x"></i>
-                Employer Sign Up Now
+                Empowers Sign Up Now
               </a>
               <a href="https://share.proto.io/YEUHOV/" class="btn btn-secondary shadow lift me-1">
-                <i class="fa-solid fa-user-plus"></i> Candidate click here
+                <i class="fa-solid fa-user-plus"></i> Candidates click here
               </a>
             </div>
           </div>
