--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <a class="nav-link active" href="index.html">Home</a>
             <a class="nav-link" href="about.html">About Us</a>
             <a class="nav-link" href="contact.html">Contact Us</a>
-            <a class="nav-link" href="#">Candidate <i class="fa-sharp fa-solid fa-users-viewfinder"></i></a>
-            <a class="nav-link me-5" href="#">Employer <i class="fa-regular fa-circle-user"></i> </a>
+            <a class="nav-link" href="#">Candidates <i class="fa-sharp fa-solid fa-users-viewfinder"></i></a>
+            <a class="nav-link me-5" href="#">Employers <i class="fa-regular fa-circle-user"></i> </a>
           </div>
         </div>
       </div>
@@ -53,7 +53,7 @@
             <!-- Heading -->
             <div class="heading">
               <h1 class="display-3 text-center text-md-start">
-                Welcome to <span class="text-white">Propl. </span><br>
+                Welcome to <span class="text-white">Propl. </span> <br>
                 Empowering careers, connecting the talents
               </h1>
               <!-- Text -->
@@ -65,7 +65,7 @@
             <!-- Buttons -->
             <div class="buttons text-center text-md-start">
               <a href="https://share-eu1.hsforms.com/1KofqwQsSRxSl340KMmv-ywetkjl" class="btn btn-primary shadow lift me-1"> <i class="fa-solid fa-right-from-bracket 2-x"></i>
-                Empowers Sign Up Now
+              Employers Sign Up Now
               </a>
               <a href="https://share.proto.io/YEUHOV/" class="btn btn-secondary shadow lift me-1">
                 <i class="fa-solid fa-user-plus"></i> Candidates click here
