--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,8 @@
             <a class="nav-link active" href="index.html">Home</a>
             <a class="nav-link" href="about.html">About Us</a>
             <a class="nav-link" href="contact.html">Contact Us</a>
-            <a class="nav-link" href="#">Candidate <i class="fa-sharp fa-solid fa-users-viewfinder"></i></a>
-            <a class="nav-link me-5" href="#">Employer <i class="fa-regular fa-circle-user"></i> </a>
+            <a class="nav-link" href="#">Candidates <i class="fa-sharp fa-solid fa-users-viewfinder"></i></a>
+            <a class="nav-link me-5" href="#">Employers <i class="fa-regular fa-circle-user"></i> </a>
           </div>
         </div>
       </div>
